[MYYAR-26] fix:add wordwrap for long words in post

--- a/examples/MapPostsExamples/client/components/Post/Post.module.css
+++ b/examples/MapPostsExamples/client/components/Post/Post.module.css
@@ -1,6 +1,7 @@
 .post {
     position: absolute;
     min-width: 500px;
+    max-width: 500px;
     background-color: whitesmoke;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     padding: 5px;
@@ -49,4 +50,9 @@
     margin: 20px 0;
     border-style: solid;
     opacity: 0.1;
+}
+
+.postText {
+    word-wrap: break-word;
+    word-break: break-all;
 }
